# matsyn

./: .gitignore  CMakeLists.txt  README.md  README.txt  lib_wavfile.sln  lib_wavfile.vcxproj  lib_wavfile.vcxproj.filters  main.cc  matsyn.jucer  wavfile.cc  wavfile.h
Builds/VisualStudio2022/: matsyn.sln  matsyn_SharedCode.vcxproj  matsyn_SharedCode.vcxproj.filters  matsyn_StandalonePlugin.vcxproj  matsyn_VST3.vcxproj  resources.rc
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
lib_wavfile/x64/Debug/: lib_wavfile.exe.recipe  lib_wavfile.ilk  vc143.idb
lib_wavfile/x64/Debug/lib_wavfile.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
matsyn_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  matsyn.sln  matsyn.vcxproj  matsyn.vcxproj.filters
matsyn_vs/lib/Debug/: base.idb  matsyn.exp  pluginterfaces.idb  sdk.idb  sdk_common.idb  sdk_hosting.idb  vstgui.idb  vstgui_standalone.idb  vstgui_support.idb  vstgui_uidescription.idb
matsyn_vs/matsyn.dir/Debug/: matsyn.vst3.recipe  vc143.idb  win32resource.res
matsyn_vs/matsyn.dir/Debug/matsyn.tlog/: CL.21800.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  matsyn.write.1u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
matsyn_vs/vst3sdk/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  cmake_modules.vcxproj  cmake_modules.vcxproj.filters  vstgui_support.vcxproj  vstgui_support.vcxproj.filters  vstsdk.sln
matsyn_vs/vst3sdk/VSTGUI.build/: cmake_install.cmake
matsyn_vs/vst3sdk/VSTGUI.build/lib/: cmake_install.cmake  vstgui.vcxproj  vstgui.vcxproj.filters
matsyn_vs/vst3sdk/VSTGUI.build/standalone/: cmake_install.cmake  vstgui_standalone.vcxproj  vstgui_standalone.vcxproj.filters
matsyn_vs/vst3sdk/VSTGUI.build/uidescription/: cmake_install.cmake  vstgui_uidescription.vcxproj  vstgui_uidescription.vcxproj.filters
matsyn_vs/vst3sdk/base/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  base.vcxproj  base.vcxproj.filters  cmake_install.cmake  smtg_base.sln
matsyn_vs/vst3sdk/base/base.dir/Debug/: base.lib.recipe
matsyn_vs/vst3sdk/base/base.dir/Debug/base.tlog/: CL.10236.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  (+1 more)
matsyn_vs/vst3sdk/pluginterfaces/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  pluginterfaces.vcxproj  pluginterfaces.vcxproj.filters  smtg_pluginterfaces.sln
matsyn_vs/vst3sdk/public.sdk/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  sdk.vcxproj  sdk.vcxproj.filters  sdk_common.vcxproj  sdk_common.vcxproj.filters  sdk_hosting.vcxproj  sdk_hosting.vcxproj.filters  smtg_public_sdk.sln
matsyn_vs/vst3sdk/public.sdk/samples/vst-hosting/: cmake_install.cmake
matsyn_vs/vst3sdk/vstgui_support.dir/Debug/vstgui_support.tlog/: CL.10408.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.read.1.tlog
matsyn_vs/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
resource/: Info.plist  mtseditor.uidesc  rys_editor.uidesc  ryseditor.uidesc  win32resource.aps
source/: mtscids.h  mtscontroller.cpp  mtscontroller.h  mtsentry.cpp  mtsprocessor.cpp  mtsprocessor.h  rys_cids.h  rys_controller.cpp  rys_entry.cpp  rys_processor.cpp  rys_processor.h  ryscids.h  ryscontroller.cpp  ryscontroller.h  rysentry.cpp  rysprocessor.cpp  rysprocessor.h  version.h
(+88 files in other folders)
